Add mapbox to top-level pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -192,5 +192,6 @@
         <module>heyzap</module>
         <module>parse</module>
         <module>reachability</module>
+        <module>mapbox</module>
     </modules>
 </project>
