--- a/mapbox/ios/src/main/bro-gen/mapbox.yaml
+++ b/mapbox/ios/src/main/bro-gen/mapbox.yaml
@@ -4,9 +4,24 @@ framework: Mapbox
 clang_args: ['-x', 'objective-c']
 headers:
     - Mapbox.h
+
 typedefs:
-    MGLTileSourceOption: NSString
-    MGLShapeSourceOption: NSString
+    
+typed_enums:
+    MGLStyleFunctionOption:
+        prefix: MGLStyleFunctionOption
+        dictionary: MGLStyleFunctionOption
+        type: NSString
+
+    MGLShapeSourceOption:
+        prefix: MGLShapeSourceOption
+        dictionary: MGLShapeSourceOption
+        type: NSString
+
+    MGLTileSourceOption:
+        prefix: MGLTileSourceOption
+        dictionary: MGLTileSourceOption
+        type: NSString
 
 enums:
     MGLPanScrollingMode: {}
@@ -126,7 +141,7 @@ classes:
                         type: NSDictionary<NSNumber, MGLStyleValue<U>>
                     options:
                         name: options
-                        type: NSDictionary<MGLStyleFunction.Option, ?>
+                        type: NSDictionary<NSString, ?>
         properties:
             stops:
                 type: NSDictionary<NSNumber, MGLStyleValue<T>>
@@ -160,7 +175,7 @@ classes:
                         type: String
                     options:
                         name: options
-                        type: NSDictionary<MGLStyleFunction.Option, ?>
+                        type: NSDictionary<NSString, ?>
         properties:
             stops:
                 type: NSDictionary<NSNumber, MGLStyleValue<T>>
@@ -463,7 +478,7 @@ classes:
                         type: NSArray<NSString>
                     options:
                         name: options
-                        type: NSDictionary<MGLTileSource.Option, ?>
+                        type: NSDictionary<NSString, ?>
     MGLRasterStyleLayer:
         methods:
             '-initWithIdentifier:source:':
@@ -513,7 +528,7 @@ classes:
                         type: NSURL
                     options:
                         name: options
-                        type: NSDictionary<MGLShapeSource.Option, ?>
+                        type: NSDictionary<NSString, ?>
             '-initWithIdentifier:shape:options:':
                 name: init
                 parameters:
@@ -525,7 +540,7 @@ classes:
                         type: MGLShape
                     options:
                         name: options
-                        type: NSDictionary<MGLShapeSource.Option, ?>
+                        type: NSDictionary<NSString, ?>
             '-initWithIdentifier:features:options:':
                 exclude: true
                 name: initFeatures
@@ -538,7 +553,7 @@ classes:
                         type: NSArray<MGLFeature>
                     options:
                         name: options
-                        type: NSDictionary<MGLShapeSource.Option, ?>
+                        type: NSDictionary<NSString, ?>
             '-initWithIdentifier:shapes:options:':
                 name: initShapes
                 parameters:
@@ -550,7 +565,7 @@ classes:
                         type: NSArray<MGLShape>
                     options:
                         name: options
-                        type: NSDictionary<MGLShapeSource.Option, ?>
+                        type: NSDictionary<NSString, ?>
     MGLSource:
         methods:
             '-initWithIdentifier:':
@@ -570,7 +585,7 @@ classes:
                         type: NSDictionary<?, MGLStyleValue<U>>
                     options:
                         name: options
-                        type: NSDictionary<MGLStyleFunction.Option, ?>
+                        type: NSDictionary<NSString, ?>
         properties:
             stops:
                 type: NSDictionary<NSNumber, MGLStyleValue<T>>
@@ -689,7 +704,7 @@ classes:
                         type: NSDictionary<?, MGLStyleValue<U>>
                     options:
                         name: options
-                        type: NSDictionary<MGLStyleFunction.Option, ?>
+                        type: NSDictionary<NSString, ?>
             '+valueWithInterpolationMode:sourceStops:attributeName:options:':
                 name: value
                 return_type: <U extends NSObject> MGLStyleValue<U>
@@ -705,7 +720,7 @@ classes:
                         type: String
                     options:
                         name: options
-                        type: NSDictionary<MGLStyleFunction.Option, ?>
+                        type: NSDictionary<NSString, ?>
             '+valueWithInterpolationMode:compositeStops:attributeName:options:':
                 name: compositeValue
                 return_type: <U extends NSObject> MGLStyleValue<U>
@@ -721,7 +736,7 @@ classes:
                         type: String
                     options:
                         name: options
-                        type: NSDictionary<MGLStyleFunction.Option, ?>
+                        type: NSDictionary<NSString, ?>
 
     MGLSymbolStyleLayer:
         methods:
@@ -749,7 +764,7 @@ classes:
                         type: NSArray<NSString>
                     options:
                         name: options
-                        type: NSDictionary<MGLTileSource.Option, ?>
+                        type: NSDictionary<NSString, ?>
             '-featuresInSourceLayersWithIdentifiers:predicate:':
                 name: features
     MGLVectorStyleLayer: {}
@@ -982,20 +997,6 @@ values:
         class: MGLOfflineStorage
         name: 'UserInfoKey#{g[0]}'
 
-    MGLStyleFunctionOption(.*):
-        class: MGLStyleFunction
-        type: Option
-        name: '#{g[0]}'
-
-    MGLTileSourceOption(.*):
-        class: MGLTileSource
-        type: Option
-        name: '#{g[0]}'
-
-    MGLShapeSourceOption(.*):
-        class: MGLShapeSource
-        type: Option
-        name: '#{g[0]}'
 
     MGLFontNamesAttribute:
         class: Mapbox
